# github-insight-agent

./: .dockerignore  .env.sample  .flake8  .gitignore  CHANGELOG.md  CLI_USAGE.md  Dockerfile  MISSION.md  README.md  cliff.toml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_cli.py  run_dashboard.py  run_pr_review.py  start_cli.sh
.githooks/: README.md  commit-msg  install-hooks.sh  post-commit  pre-commit-security
.hermes/: evaluation-20260427.md
docs/: ARCHITECTURE.md  ARCHITECTURE_SUMMARY.md  CHANGELOG_AUTO.md  FLOWCHARTS.md  GIT_HOOKS.md  PRE_COMMIT_HOOKS.md  QUICK_REFERENCE.md  README.md  USER_GUIDE.md  iteration-plan.md  meta-analysis-report.md  sprint3-report.md  sprint4-report.md  sprint5-report.md  sprint6-report.md
internal/: ADLC_PHASE2_IMPROVEMENTS_20260507.md  ADLC_PHASE2_REASSESSMENT_20260507.md  ADLC_PHASE3_IMPROVEMENTS_20260507.md  ADLC_PHASE3_REASSESSMENT_20260507.md
src/: __init__.py
tests/: __init__.py  test_additional_mission_tests.py  test_additional_unit.py  test_circuit_breaker_kpi.py  test_contracts.py  test_coverage_boost.py  test_edge_cases.py  test_event_bus.py  test_feedback.py  test_feedback_trend.py  test_github_toolkit.py  test_golden_dataset.py  test_integration.py  test_kpi_tracker.py  test_llm_cache.py  test_llm_compression.py  test_llm_judge.py  test_mission_part1.py  test_mission_part2.py  test_mission_part3.py  test_mission_part3_supplement.py  test_mission_supplement.py  test_nl_understanding.py  test_orphan_tools.py  test_p0_improvements.py  test_p2_improvements.py  test_persistent_storage.py  test_phase3_guardrails_improvements.py  test_phase4_evaluation_improvements.py  test_phase5_deployment_improvements.py  test_prompt_builder.py  test_red_team.py  test_s3_native_function_calling.py  (+8 more)
(+82 files in other folders)
