[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-insight-agent"
version = "1.1.0"
description = "Enterprise multi-agent intelligence analysis system for GitHub repository analysis"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Lisa", email = "your-email@example.com"}
]
keywords = ["github", "agent", "ai", "analysis", "mcp", "agentscope"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "agentscope==1.0.18",
    "aiohttp>=3.9.0",
    "dashscope==1.25.16",
    "loguru==0.7.3",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.3",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
]

[project.scripts]
gia = "src.cli.app:main"

[project.urls]
Homepage = "https://github.com/Lisa0926/github-insight-agent"
Repository = "https://github.com/Lisa0926/github-insight-agent.git"
Documentation = "https://github.com/Lisa0926/github-insight-agent/tree/main/docs"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "src.*"]
namespaces = false

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json", "*.md"]
